--- a/actionhazar.html
+++ b/actionhazar.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="img/logo-cineflix.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css?family=Agbalumo" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="stylehazar.css">
+    <link rel="stylesheet" href="actionhazar.css">
 </head>
 <body>
 <!--Genre Action Comédie-->
