--- a/actionhazar.html
+++ b/actionhazar.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 <!--Genre Action Comédie-->
+<!--changer la couleur des barres, reduire la vitesse du carrousel-->
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -26,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                        <a class="nav-link" aria-current="page" href="#">Accueil</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">à Propos</a>
@@ -38,7 +39,7 @@
                         <a class="nav-link" href="#">Se Connecter</a>
                     </li>
                     <li class="nav-item deuxbouton">
-                        <a class="nav-link" href="#">S'inscrire</a>
+                        <a class="nav-link" href="#inscrireancre">S'inscrire</a>
                     </li>
                 </ul>
             </div>
@@ -52,7 +53,7 @@
         <a class="liensreservez" href="">Vos films préférés, illimités dès maintenant !</a>
     </section>
     <hr>
-    <section>
+    <section class="fondcolorer">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -115,7 +116,7 @@
         </div>
     </section>
     <hr>
-    <section style="background-color: #f8f9fa">
+    <section>
         <p class="intro">Voici 10 raisons de s'abonner à Cineflix :</p>
         <div class="content">
             <div class="column">
@@ -198,7 +199,7 @@
         <div class="container">
             <!-- Formulaire d'inscription -->
             <div class="col-form">
-                <h2>Inscription</h2>
+                <h3>Inscription</h3>
                 <form action="#" method="post">
                     <div class="form-group">
                         <label for="name">Nom :</label>
@@ -223,12 +224,12 @@
                         <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirmer votre mot de passe" class="transparent-text" required>
                     </div>
 
-                    <button type="submit" class="btn-submit">S'inscrire</button>
+                    <button id="inscrireancre" type="submit" class="btn-submit">S'inscrire</button>
                 </form>
             </div>
             <!-- Section téléphone -->
             <div class="col-phone">
-                <h2>Être appelé</h2>
+                <h3>Être appelé</h3>
                 <p>Entrez votre numéro de téléphone et nous vous appellerons.</p>
                 <div class="phone-form">
                     <input type="tel" id="phone" name="phone" placeholder="Votre numéro" required>
@@ -257,17 +258,18 @@
     </section>
 </main>
 <footer>
+    <hr>
     <div class="container">
         <ul class="footer-links">
             <li><a href="#">Devenir Partenaire</a></li>
-            <li><a href="#">Mentions légales</a></li>
+            <li><a href="mentionlegale.html" target="_blank">Mentions légales </a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">Plan du site</a></li>
         </ul>
         <p class="footer-text">Déclaration d'accessibilité | Politique de confidentialité</p>
     </div>
 </footer>
-
+<hr>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
