--- a/actionhazar.html
+++ b/actionhazar.html
@@ -16,7 +16,6 @@
 </head>
 <body>
 <!--Genre Action Comédie-->
-<!--changer la couleur des barres, reduire la vitesse du carrousel-->
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
@@ -32,6 +31,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">à Propos</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Autre Genre
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Romance</a></li>
+                            <li><a class="dropdown-item" href="#">Science-fiction</a></li>
+                            <li><a class="dropdown-item" href="#">Comédie</a></li>
+                            <li><a class="dropdown-item" href="#">Horreur</a></li>
+                        </ul>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Contact</a>
                     </li>
