ajout avantage supplemtaire sous le nom de card exclusif

--- a/actionhazar.html
+++ b/actionhazar.html
@@ -36,7 +36,7 @@
                             Autre Genre
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="actionhazar.html">Action</a></li>
                             <li><a class="dropdown-item" href="#">Romance</a></li>
                             <li><a class="dropdown-item" href="#">Science-fiction</a></li>
                             <li><a class="dropdown-item" href="#">Comédie</a></li>
@@ -154,7 +154,7 @@
                     <h3>Free</h3>
                 </div>
                 <div class="pricing-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                    <p>Offre Free, profitez d'un accès gratuit standart !</p>
                     <ul>
                         <li>Accès limité, qualité HD</li>
                         <li>Service rapide</li>
@@ -166,12 +166,30 @@
                     <button>Abonnez-vous</button>
                 </div>
             </div>
+            <div class="pricing-card exclusif">
+                <div class="pricing-header">
+                    <h3>Exclusif</h3>
+                </div>
+                <div class="pricing-body">
+                    <p>Abonnement et avantages exclusifs immédiats !</p>
+                    <ul>
+                        <li></li>
+                        <li>Mode hors-ligne</li>
+                        <li>Recommandation personnalisées</li>
+                        <li>Auncun engagement</li>
+                    </ul>
+                </div>
+                <div class="pricing-footer">
+                    <p>$50/month</p>
+                    <button>Abonnez-vous</button>
+                </div>
+            </div>
             <div class="pricing-card standard">
                 <div class="pricing-header">
                     <h3>Standard</h3>
                 </div>
                 <div class="pricing-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                    <p>Abonnement standard, découvrez des avantages !</p>
                     <ul>
                         <li></li>
                         <li>Catalogue étendu, Full HD</li>
@@ -189,7 +207,7 @@
                     <h3>Premium</h3>
                 </div>
                 <div class="pricing-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur.</p>
+                    <p>Offre Premium, profitez d'un accès privilégié exclusif !</p>
                     <ul>
                         <li></li><!--reprendre les offre sur la fiche -->
                         <li>Streaming instantané</li>
