ajout du personnat + texte qui va avec

--- a/actionhazar.html
+++ b/actionhazar.html
@@ -297,6 +297,49 @@
         <p class="footer-text">Déclaration d'accessibilité | Politique de confidentialité</p>
     </div>
 </footer>
+<div class="container">
+    <section class="persona-section">
+        <h2>Persona : Sophie, la Cinéphile Moderne</h2>
+
+        <div class="persona-info">
+            <div class="persona-photo">
+                <img src="img/Capture%20d'écran%202024-11-28%20150020.png" alt="Photo de Sophie" />
+            </div>
+            <div class="persona-details">
+                <h3>À propos de Sophie</h3>
+                <p><strong>Nom:</strong> Sophie Martin</p>
+                <p><strong>Âge:</strong> 28 ans</p>
+                <p><strong>Profession:</strong> Chargée de communication digitale</p>
+                <p><strong>Lieu:</strong> Paris, France</p>
+                <p><strong>Passions:</strong> Cinéma, séries TV, voyages</p>
+                <p><strong>Technologie:</strong> Utilisatrice intermédiaire des outils numériques</p>
+            </div>
+        </div>
+
+        <h3>Objectifs de Sophie :</h3>
+        <ul>
+            <li>Découvrir de nouveaux films et séries.</li>
+            <li>Garder une trace des films vus et ceux à voir.</li>
+            <li>Lire des critiques avant de regarder un film.</li>
+            <li>Accéder facilement aux informations clés sur chaque film.</li>
+        </ul>
+
+        <h3>Problématiques de Sophie :</h3>
+        <ul>
+            <li>Manque de temps pour explorer les films à cause de son emploi du temps chargé.</li>
+            <li>Trop de choix sur les plateformes, difficile de choisir rapidement un film.</li>
+            <li>Préférence pour une interface simple et intuitive.</li>
+        </ul>
+
+        <h3>Solutions proposées par le site :</h3>
+        <ul>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid consectetur, id. Alias, amet animi hic neque nesciunt voluptas voluptates? Dolore ex labore maxime molestias nihil nostrum quidem similique sit temporibus?</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi id officiis recusandae sequi tenetur? Animi doloremque, earum illum nihil quam quasi veniam! Eos est eveniet explicabo, facilis in iste placeat.</li>
+            <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam dicta dolorum enim fuga ipsam, sed! Aliquam ex, iste itaque quis repellat repellendus sapiente sit? Dicta dolorem exercitationem porro rerum veritatis.</li>
+            <li>Design responsive pour une utilisation mobile aisée.</li>
+        </ul>
+    </section>
+</div>
 <hr>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
