--- a/science_fi.html
+++ b/science_fi.html
@@ -105,9 +105,12 @@
         <section id="intro">
           <div class="container-fluid justify-content-space-around">
             <div
-              class="row w-100 pt-5 text-center text-align-center position-absolute"
+              class="row pt-5 text-center text-align-center justify-content-center"
             >
-              <div class="col-12 col-sm-12 col-md-12 flou">
+              <div
+                class="col-12 col-sm-6 col-md-5 flou"
+                style="margin-left: 20px"
+              >
                 <h1 style="font-size: 3em">CinéFlix</h1>
                 <p>
                   Cinéflix, le meilleur site pour les fans de cinéma : plongez
@@ -125,8 +128,8 @@
 
       <section>
         <div
-          class="row w-100 text-center justify-content-center pt-2 pb-2"
-          style="border: 10px solid black; border-radius: 100px; margin: auto"
+          class="row text-center justify-content-center pt-2 pb-2"
+          style="margin: auto"
         >
           <div class="col-8 col-sm-12 col-md-12 pb-4">
             <h2 id="souligne">CinéFlix c'est quoi ?</h2>
@@ -151,26 +154,13 @@
 
         <section>
           <div class="container-fluid">
-            <div
-              class="row w-100 text-align(start) justify-content-center pt-5 pb-3"
-            >
+            <div class="row text-align(start) justify-content-center pt-5 pb-3">
               <div class="col-12">
                 <h2 id="souligne">Avantages</h2>
               </div>
-              <div class="col-12 col-md-8 pt-4 pb-4">
-                <p>
-                  Avec CinéFlix, profitez d'une expérience de streaming simple,
-                  rapide et personnalisée. Notre plateforme offre une vaste
-                  sélection de films et séries adaptés à tous les goûts,
-                  disponibles en haute définition. Pas de publicités intrusives,
-                  un accès illimité à vos contenus préférés, et des
-                  recommandations sur mesure : CinéFlix transforme vos moments
-                  de détente en un véritable plaisir.
-                </p>
-              </div>
             </div>
 
-            <div class="row w-100 text-center justify-content-center pb-5">
+            <div class="row text-center justify-content-center pb-5">
               <div class="col-12 col-sm-6 col-md-3">
                 <img
                   class="rounded-5"
@@ -197,7 +187,7 @@
                 />
                 <p><em>Visionnage sans pub </em></p>
               </div>
-              <div class="col-12 col-sm-6 col-md-3">
+              <div class="col-12 col-sm-6 col-md-3 pt-4">
                 <img
                   class="rounded-5"
                   src="/img_science_fiction/image_resolution_quatrek.jpg"
@@ -215,10 +205,7 @@
         <!-------------------------------DEBUT SECTION CAROUSSEL FILM DE VEDTTE--------------------------------->
 
         <section>
-          <div
-            class="container"
-            style="border: 10px solid black; border-radius: 100px"
-          >
+          <div class="container">
             <div class="row text-center justify-content-center pt-3 pb-3">
               <div class="col-12">
                 <h2 id="souligne">Films en Vedette</h2>
@@ -229,35 +216,35 @@
                     <div class="carousel-item active">
                       <img
                         src="/img_science_fiction/action_avengers.jpg"
-                        class="d-block w-100 height-auto rond"
+                        class="img-fluid d-block w-100 height-auto rond"
                         alt="Affiche Avengers"
                       />
                     </div>
                     <div class="carousel-item">
                       <img
                         src="https://www.legaliondesetoiles.com/photo/art/grande/61109687-44674754.jpg?v=1640584774"
-                        class="d-block w-100 height-auto rond"
+                        class="img-fluid d-block w-100 height-auto rond"
                         alt="Affiche Annhilation"
                       />
                     </div>
                     <div class="carousel-item">
                       <img
                         src="https://www.mediatheque-mauguio-carnon.com/sites/default/files/users/n.thorrignac/tenet.jpg"
-                        class="d-block w-100 height-auto rond"
+                        class="img-fluid d-block w-100 height-auto rond"
                         alt="Affiche Tenet"
                       />
                     </div>
                     <div class="carousel-item">
                       <img
                         src="https://c8.alamy.com/compfr/ec7wg1/affiche-de-film-de-george-lucas-film-star-wars-un-americain-epic-espace-science-fiction-film-series-cree-par-george-lucas-ec7wg1.jpg"
-                        class="d-block w-100 height-auto rond"
+                        class="img-fluid d-block w-100 height-auto rond"
                         alt="Affiche Star Wars"
                       />
                     </div>
                     <div class="carousel-item">
                       <img
                         src="https://m.media-amazon.com/images/I/71gItXCCZ7L._AC_UF1000,1000_QL80_.jpg"
-                        class="d-block w-100 height-auto rond"
+                        class="img-fluid d-block w-100 height-auto rond"
                         alt="Affiche E.T"
                       />
                     </div>
@@ -379,10 +366,7 @@
         <!-------------------------------------------DEBUT SECTION AVIS CLIENTS------------------------------------------->
 
         <section>
-          <div
-            class="container-fluid"
-            style="border: 10px solid black; border-radius: 100px"
-          >
+          <div class="container-fluid">
             <div class="row pt-4 text-center">
               <div class="col-12 pb-3">
                 <h2 id="souligne">Avis des clients et retours :</h2>
@@ -524,7 +508,7 @@
           <div class="container-fluid">
             <div class="row pt-5 pb-4">
               <div class="col">
-                <h2 id="souligne">Bénéfices d'un abonnement</h2>
+                <h2 id="souligne">Les bénéfices de s'abonner</h2>
               </div>
             </div>
             <div class="row justify-content-center">
@@ -543,9 +527,80 @@
                         >qualité HD ou 4K
                       </em>
                       garantit un visionnage exceptionnel 🖥️🎞️.
-                      <em>Visionner aussi hors ligne </em>🚀🍿. Une solution idéale
-                      pour les cinéphiles et les amateurs de divertissement !
+                      <em>Visionner aussi hors ligne </em>🚀🍿. Une solution
+                      idéale pour les cinéphiles et les amateurs de
+                      divertissement !
                     </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <!------------------------------------------------------FIN SECTION AVANTAGE--------------------------------------------->
+        <!------------------------------------------------------DEBUT SECTION PERSONA--------------------------------------------->
+        <section>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="row pt-5 pb-4">
+                <div class="col">
+                  <h2 id="souligne">Le Salon des Sciences-Fictions</h2>
+                </div>
+                <div
+                  class="col-12 col-md-6 col-md-12"
+                  style="text-align: center; padding-top: 2%"
+                >
+                  <p>
+                    Inscrivez-vous pour rejoindre le salon de la
+                    <em>Science-Fiction</em>
+                    qui ouvre bientôt :
+                  </p>
+                </div>
+              </div>
+              <div class="row justify-content-center pb-5">
+                <div class="col-10 col-sm-5 col-md-5">
+                  <div class="form-floating mb-3">
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="floatingInput"
+                    />
+                    <label for="floatingInput">Email address</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="floatingPassword"
+                    />
+                    <label for="floatingPassword">Password</label>
+                  </div>
+                  <div class="form-floating mb-3">
+                    <textarea
+                      class="form-control"
+                      id="floatingTextarea"
+                    ></textarea>
+                    <label for="floatingTextarea">Comments</label>
+                  </div>
+                  <div class="row justify-content-center">
+                    <div class="col-9">
+                      <div class="form-floating">
+                        <select
+                          class="form-select"
+                          id="floatingSelectDisabled"
+                          aria-label="Floating label disabled select example"
+                          disabled
+                        >
+                          <option selected>Open this select menu</option>
+                          <option value="1">One</option>
+                          <option value="2">Two</option>
+                          <option value="3">Three</option>
+                        </select>
+                        <label for="floatingSelectDisabled"
+                          >Works with selects</label
+                        >
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -556,7 +611,84 @@
     </main>
     <!-------------------------------------------------------- FOOTERRR ------------------------------------------------------------------------->
     <footer>
-      
+      <div class="container-fluidf pb-0 mb-0 justify-content-center text-light">
+        <footer>
+          <div class="row my-5 justify-content-center py-5">
+            <div class="col-11">
+              <div class="row">
+                <div
+                  class="col-xl-8 col-md-4 col-sm-4 col-12 my-auto mx-auto a"
+                >
+                  <h3 class="text-muted mb-md-0 mb-5 bold-text">Pepper.</h3>
+                </div>
+                <div class="col-xl-2 col-md-4 col-sm-4 col-12">
+                  <h6 class="mb-3 mb-lg-4 bold-text"><b>MENU</b></h6>
+                  <ul class="list-unstyled">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Blog</li>
+                    <li>Portfolio</li>
+                  </ul>
+                </div>
+                <div class="col-xl-2 col-md-4 col-sm-4 col-12">
+                  <h6 class="mb-3 mb-lg-4 text-muted bold-text mt-sm-0 mt-5">
+                    <b>ADDRESS</b>
+                  </h6>
+                  <p class="mb-1">605, RATAN ICON BUILDING</p>
+                  <p>SEAWOODS SECTOR</p>
+                </div>
+              </div>
+              <div class="row">
+                <div
+                  class="col-xl-8 col-md-4 col-sm-4 col-auto my-md-0 mt-5 order-sm-1 order-3 align-self-end"
+                >
+                  <p class="social text-muted mb-0 pb-0 bold-text">
+                    <span class="mx-2"
+                      ><i class="fa fa-facebook" aria-hidden="true"></i
+                    ></span>
+                    <span class="mx-2"
+                      ><i class="fa fa-linkedin-square" aria-hidden="true"></i
+                    ></span>
+                    <span class="mx-2"
+                      ><i class="fa fa-twitter" aria-hidden="true"></i
+                    ></span>
+                    <span class="mx-2"
+                      ><i class="fa fa-instagram" aria-hidden="true"></i
+                    ></span>
+                  </p>
+                  <small class="rights"
+                    ><span>&#174;</span> Pepper All Rights Reserved.</small
+                  >
+                </div>
+                <div
+                  class="col-xl-2 col-md-4 col-sm-4 col-auto order-1 align-self-end"
+                >
+                  <h6 class="mt-55 mt-2 text-muted bold-text">
+                    <b>ANIRUDH SINGLA</b>
+                  </h6>
+                  <small>
+                    <span
+                      ><i class="fa fa-envelope" aria-hidden="true"></i
+                    ></span>
+                    anirudh@gmail.com</small
+                  >
+                </div>
+                <div
+                  class="col-xl-2 col-md-4 col-sm-4 col-auto order-2 align-self-end mt-3"
+                >
+                  <h6 class="text-muted bold-text"><b>RISHABH SHEKHAR</b></h6>
+                  <small
+                    ><span
+                      ><i class="fa fa-envelope" aria-hidden="true"></i
+                    ></span>
+                    rishab@gmail.com</small
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </div>
     </footer>
 
     <script
