--- a/science_fi.html
+++ b/science_fi.html
@@ -619,7 +619,6 @@
                     ></textarea>
                     <label for="floatingTextarea">Comments</label>
                   </div>
-                  
                 </div>
               </div>
             </div>
@@ -630,69 +629,63 @@
     <!-------------------------------------------------------- FOOTERRR ------------------------------------------------------------------------->
     <footer>
       <div class="container-fluidf pb-0 mb-0 justify-content-center text-light">
-        <footer>
-          <div class="row my-5 justify-content-center py-5">
-            <div class="col-11">
-              <div class="row">
-                <div
-                  class="col-xl-8 col-md-4 col-sm-4 col-12 my-auto mx-auto a"
-                >
-                  <h3>CinéFlix</h3>
-                </div>
-                <div class="col-xl-2 col-md-4 col-sm-4 col-12">
-                  <h6 class="mb-3 mb-lg-4 bold-text"><b>MENU</b></h6>
-                  <ul class="list-unstyled">
-                    <li><a href="index.html">Accueil </a></li>
-                    <li><a href="mentionlegale.html">Mentions Légales</a></li>
-                  </ul>
-                </div>
-                <div class="col-xl-2 col-md-4 col-sm-4 col-12">
-                  <h6 class="mb-3 mb-lg-4 text-muted bold-text mt-sm-0 mt-5">
-                    <b>ADDRESS</b>
-                  </h6>
-                  <p class="mb-1">3 Rue du Pressoir</p>
-                  <p>Isneauville</p>
-                </div>
+        <div class="row my-5 justify-content-center py-5">
+          <div class="col-11">
+            <div class="row">
+              <div class="col-xl-8 col-md-4 col-sm-4 col-12 my-auto mx-auto a">
+                <h3>CinéFlix</h3>
               </div>
-              <div class="row">
-                <div
-                  class="col-xl-8 col-md-4 col-sm-4 col-auto my-md-0 mt-5 order-sm-1 order-3 align-self-end"
+              <div class="col-xl-2 col-md-4 col-sm-4 col-12">
+                <h6 class="mb-3 mb-lg-4 bold-text"><b>MENU</b></h6>
+                <ul class="list-unstyled">
+                  <li><a href="index.html">Accueil </a></li>
+                  <li><a href="mentionlegale.html">Mentions Légales</a></li>
+                </ul>
+              </div>
+              <div class="col-xl-2 col-md-4 col-sm-4 col-12">
+                <h6 class="mb-3 mb-lg-4 text-muted bold-text mt-sm-0 mt-5">
+                  <b>ADDRESS</b>
+                </h6>
+                <p class="mb-1">3 Rue du Pressoir</p>
+                <p>Isneauville</p>
+              </div>
+            </div>
+            <div class="row">
+              <div
+                class="col-xl-8 col-md-4 col-sm-4 col-auto my-md-0 mt-5 order-sm-1 order-3 align-self-end"
+              >
+                <p class="social text-muted mb-0 pb-0 bold-text">
+                  <span class="mx-2"
+                    ><i class="fa fa-facebook" aria-hidden="true"></i
+                  ></span>
+                  <span class="mx-2"
+                    ><i class="fa fa-linkedin-square" aria-hidden="true"></i
+                  ></span>
+                  <span class="mx-2"
+                    ><i class="fa fa-twitter" aria-hidden="true"></i
+                  ></span>
+                  <span class="mx-2"
+                    ><i class="fa fa-instagram" aria-hidden="true"></i
+                  ></span>
+                </p>
+                <small class="rights"
+                  ><span>&#174;</span> CinéFlix All Rights Reserved.</small
                 >
-                  <p class="social text-muted mb-0 pb-0 bold-text">
-                    <span class="mx-2"
-                      ><i class="fa fa-facebook" aria-hidden="true"></i
-                    ></span>
-                    <span class="mx-2"
-                      ><i class="fa fa-linkedin-square" aria-hidden="true"></i
-                    ></span>
-                    <span class="mx-2"
-                      ><i class="fa fa-twitter" aria-hidden="true"></i
-                    ></span>
-                    <span class="mx-2"
-                      ><i class="fa fa-instagram" aria-hidden="true"></i
-                    ></span>
-                  </p>
-                  <small class="rights"
-                    ><span>&#174;</span> CinéFlix All Rights Reserved.</small
-                  >
-                </div>
-                <div
-                  class="col-xl-2 col-md-4 col-sm-4 col-auto order-1 align-self-end"
+              </div>
+              <div
+                class="col-xl-2 col-md-4 col-sm-4 col-auto order-1 align-self-end"
+              >
+                <h6 class="mt-55 mt-2 text-muted bold-text">
+                  <b>GUERAIN Corinthe</b>
+                </h6>
+                <small>
+                  <span><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                  directeurcineflixh@gmail.com</small
                 >
-                  <h6 class="mt-55 mt-2 text-muted bold-text">
-                    <b>GUERAIN Corinthe</b>
-                  </h6>
-                  <small>
-                    <span
-                      ><i class="fa fa-envelope" aria-hidden="true"></i
-                    ></span>
-                    directeurcineflixh@gmail.com</small
-                  >
-                </div>
               </div>
             </div>
           </div>
-        </footer>
+        </div>
       </div>
     </footer>
 
