--- a/action.html
+++ b/action.html
@@ -604,7 +604,7 @@
           <div class="col-12">
             <div class="row">
               <div class="col-xl-8 col-md-4 col-sm-4 col-12 my-auto mx-auto a">
-                <h3 class="padding-left">CinéFlix</h3>
+                <h3 class="padding-left footer-h3">CinéFlix</h3>
               </div>
               <div class="col-xl-2 col-md-4 col-sm-4 col-12">
                 <h6 class="mb-3 mb-lg-4 bold-text"><b>MENU</b></h6>
