--- a/science_fi.html
+++ b/science_fi.html
@@ -254,39 +254,64 @@
                 <div id="carouselExample" class="carousel slide">
                   <div class="carousel-inner">
                     <div class="carousel-item active">
-                      <img
-                        src="/img_science_fiction/action_avengers.jpg"
-                        class="img-fluid d-block w-100 height-auto rond"
-                        alt="Affiche Avengers"
-                      />
+                      <a
+                        href="https://www.youtube.com/watch?v=b-kTeJhHOhc"
+                        target="_blank"
+                      >
+                        <img
+                          src="/img_science_fiction/action_avengers.jpg"
+                          class="img-fluid d-block w-100 height-auto rond"
+                          alt="Affiche Avengers"
+                        />
+                      </a>
                     </div>
                     <div class="carousel-item">
-                      <img
-                        src="https://www.legaliondesetoiles.com/photo/art/grande/61109687-44674754.jpg?v=1640584774"
-                        class="img-fluid d-block w-100 height-auto rond"
-                        alt="Affiche Annhilation"
-                      />
+                      <a
+                        href="https://www.youtube.com/watch?v=Nsuh3ycEd8M"
+                        target="_blank"
+                      >
+                        <img
+                          src="https://www.legaliondesetoiles.com/photo/art/grande/61109687-44674754.jpg?v=1640584774"
+                          class="img-fluid d-block w-100 height-auto rond"
+                          alt="Affiche Annhilation"
+                        />
+                      </a>
                     </div>
                     <div class="carousel-item">
-                      <img
-                        src="https://www.mediatheque-mauguio-carnon.com/sites/default/files/users/n.thorrignac/tenet.jpg"
-                        class="img-fluid d-block w-100 height-auto rond"
-                        alt="Affiche Tenet"
-                      />
+                      <a
+                        href="https://www.youtube.com/watch?v=6UG5LJQNjts"
+                        target="_blank"
+                      >
+                        <img
+                          src="https://www.mediatheque-mauguio-carnon.com/sites/default/files/users/n.thorrignac/tenet.jpg"
+                          class="img-fluid d-block w-100 height-auto rond"
+                          alt="Affiche Tenet"
+                        />
+                      </a>
                     </div>
                     <div class="carousel-item">
-                      <img
-                        src="https://c8.alamy.com/compfr/ec7wg1/affiche-de-film-de-george-lucas-film-star-wars-un-americain-epic-espace-science-fiction-film-series-cree-par-george-lucas-ec7wg1.jpg"
-                        class="img-fluid d-block w-100 height-auto rond"
-                        alt="Affiche Star Wars"
-                      />
+                      <a
+                        href="https://www.youtube.com/watch?v=pHgwf2eMFnA"
+                        target="_blank"
+                      >
+                        <img
+                          src="https://c8.alamy.com/compfr/ec7wg1/affiche-de-film-de-george-lucas-film-star-wars-un-americain-epic-espace-science-fiction-film-series-cree-par-george-lucas-ec7wg1.jpg"
+                          class="img-fluid d-block w-100 height-auto rond"
+                          alt="Affiche Star Wars"
+                        />
+                      </a>
                     </div>
                     <div class="carousel-item">
-                      <img
-                        src="https://m.media-amazon.com/images/I/71gItXCCZ7L._AC_UF1000,1000_QL80_.jpg"
-                        class="img-fluid d-block w-100 height-auto rond"
-                        alt="Affiche E.T"
-                      />
+                      <a
+                        href="https://www.youtube.com/watch?v=Jva4IWuDYLM"
+                        target="_blank"
+                      >
+                        <img
+                          src="https://m.media-amazon.com/images/I/71gItXCCZ7L._AC_UF1000,1000_QL80_.jpg"
+                          class="img-fluid d-block w-100 height-auto rond"
+                          alt="Affiche E.T"
+                        />
+                      </a>
                     </div>
                   </div>
 
